# orso-postgres

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile.toml  PLAN.md  QWEN.md  README.md  VECTOR_IMPLEMENTATION.md  debug_fields.rs  test_external_usage.rs  test_schema_debug.rs  todo.todo
.github/workflows/: release-plz.yml
orso/: CHANGELOG.md  Cargo.toml
orso-macros/: Cargo.toml
orso-postgres/: Cargo.toml
orso-postgres-macros/: Cargo.toml
orso-postgres-macros/src/: lib.rs
orso-postgres/src/: database.rs  error.rs  filters.rs  lib.rs  macros.rs  migrations.rs  operations.rs  pagination.rs  query.rs  test.rs  traits.rs  types.rs  utils.rs
orso/src/: database.rs  error.rs  filters.rs  floating_codec.rs  integer_codec.rs  lib.rs  migrations.rs  operations.rs  query.rs  test.rs  traits.rs  types.rs  utils.rs
