[package]
name = "orso-postgres"
description = "ORSO PostgreSQL - A lightweight PostgreSQL ORM with compression and zero-loss migrations"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/orso-postgres"
keywords = ["orm", "database", "postgresql", "postgres", "async"]
categories = ["database"]
readme = "../README.md"

[dependencies]
orso-postgres-macros = { path = "../orso-postgres-macros", version = "0.0.2" }
tokio-postgres = "0.7"
deadpool-postgres = "0.12"
postgres-types = { version = "0.2", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
async-trait = "0.1"
cydec = { git = "https://github.com/tia-lab/cydec" }

[dev-dependencies]
tracing-test = "0.2"

[lib]
name = "orso_postgres"
path = "src/lib.rs"

[[bin]]
name = "debug_schema"
path = "src/bin/debug_schema.rs"

[[bin]]
name = "test_migration"
path = "src/bin/test_migration.rs"
